[package]
name = "mmm"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
panic = "abort"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.4.3"
reqwest = {version = "0.12.2", features = ["blocking","json"] }
serde = {version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
